--- a/i3/config
+++ b/i3/config
@@ -8,6 +8,8 @@
 # i3 config file (v4)
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
+gaps inner 5
+gaps outer 1
 
 set $mod Mod4
 
