--- a/i3/config
+++ b/i3/config
@@ -181,20 +181,23 @@ mode "resize" {
         bindsym Return mode "default"
         bindsym Escape mode "default"
         bindsym $mod+r mode "default"
-}
-
+      }
 bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 exec --no-startup-id picom --config ~/.config/picom/picom.conf
-bar {
-        status_command i3status
-        colors {
-        background #00000000   # transparent (last two zeros = alpha)
-        statusline #ffffff
-        separator  #666666
-    }
-}
+#bar {
+#        status_command i3status
+#        colors {
+#        background #00000000   # transparent (last two zeros = alpha)
+#        statusline #ffffff
+#        separator  #666666
+#    }
+#}
+
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+
+
 bindsym $mod+d exec rofi -show drun
 exec_always --no-startup-id feh --bg-fill ~/Pictures/wallpapers/backgroud1.jpg
